[gd_scene load_steps=16 format=2]

[ext_resource path="res://DeathPlane.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObeliskLight.gd" type="Script" id=2]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level.gd" type="Script" id=6]
[ext_resource path="res://Assets/Shock.wav" type="AudioStream" id=7]
[ext_resource path="res://obelisk.tscn" type="PackedScene" id=8]
[ext_resource path="res://LightSphere.tscn" type="PackedScene" id=9]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=10]
[ext_resource path="res://Portal.gd" type="Script" id=11]
[ext_resource path="res://Assets/Deposit.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Collect.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Press.wav" type="AudioStream" id=14]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=15]

[node name="Level" type="Spatial"]
script = ExtResource( 6 )

[node name="DeathPlane" parent="." instance=ExtResource( 1 )]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, -0.0404602, 0.42952, 1.60531 )

[node name="Platform" parent="." instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 3.07605, 56.8594, 15.4047 )

[node name="Platform5" parent="." instance=ExtResource( 3 )]
transform = Transform( 7, 0, 0, 0, 7, 0, 0, 0, 7, 0.633199, 48.2674, 1.85885 )

[node name="Platform2" parent="." instance=ExtResource( 3 )]
transform = Transform( 4, 0, 0, 0, 2, 0, 0, 0, 4, 7.29287, 54.4072, 25.8103 )

[node name="Platform3" parent="." instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 18.9121, 52.1396, 38.673 )

[node name="Platform4" parent="." instance=ExtResource( 3 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 18.6192, 64.6776, 48.2781 )

[node name="Player" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.32002, 55.5315, 0.937622 )
script = ExtResource( 4 )

[node name="obelisk" parent="." instance=ExtResource( 8 )]
transform = Transform( 0.5, 0, 0, 0, -0.5, 7.54979e-08, 0, -7.54979e-08, -0.5, 0, 55.9628, -2.76129 )

[node name="LightSphere" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.8366, 67.7042, 47.9354 )

[node name="ObeliskLight" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0215577, 59.2387, -1.69229 )
script = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 60.2868, -2.52043 )
light_energy = 4.017
omni_range = 4.104

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.724124, 0.68967, 0, -0.68967, -0.724124, 21.1376, 107.853, -75.4108 )
light_energy = 0.2

[node name="Portal" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.00261794, 0, 0.999997, 0, 1, 0, -0.999997, 0, 0.00261794, -4.82284, 58.1025, 2.14189 )
script = ExtResource( 11 )

[node name="Deposit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Collect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="HUD" parent="." instance=ExtResource( 15 )]

[node name="Shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
